// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keeps objects as is 1`] = `
"{
  const fill1 = (top = 0, left = 0, right = 0, bottom = 0) => ({
    position: 'absolute',
    top,
    right,
    bottom,
    left
  });

  {
    const fill2 = (top = 0, left = 0, right = 0, bottom = 0) => {
      return {
        position: 'absolute',
        top,
        right,
        bottom,
        left
      };
    };

    {
      exports.__linariaPreval = [fill1, fill2];
    }
  }
}"
`;

exports[`keeps only code which is related to \`a\` 1`] = `
"{
  const {
    whiteColor: color,
    anotherColor
  } = require('…');

  {
    const a = color || anotherColor;
    {
      exports.__linariaPreval = [a];
    }
  }
}"
`;

exports[`keeps only code which is related to \`anotherColor\` 1`] = `
"{
  const {
    whiteColor: color,
    anotherColor
  } = require('…');

  {
    exports.__linariaPreval = [anotherColor];
  }
}"
`;

exports[`keeps only code which is related to \`color\` 1`] = `
"{
  const {
    whiteColor: color,
    anotherColor
  } = require('…');

  {
    exports.__linariaPreval = [color];
  }
}"
`;

exports[`removes all 1`] = `
"{
  exports.__linariaPreval = [];
}"
`;

exports[`shakes assignment patterns 1`] = `
"{
  const [identifier = 1] = [2];
  {
    const [{ ...object
    } = {}] = [{
      a: 1,
      b: 2
    }];
    {
      const [[...array] = []] = [[1, 2, 3, 4]];
      {
        const obj = {
          member: null
        };
        {
          exports.__linariaPreval = [identifier, object, array, obj];
        }
      }
    }
  }
}"
`;

exports[`shakes es5 exports 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.redColor = 'red';
Object.defineProperty(exports, \\"blueColor\\", {
  enumerable: true,
  get: function get() {
    return 'blue';
  }
});
Object.defineProperty(exports, \\"greenColor\\", {
  enumerable: true,
  get: function get() {
    return 'green';
  }
});"
`;

exports[`shakes exports 1`] = `
"{
  var _ = require(\\"\\\\u2026\\");

  {
    const a = _.whiteColor;
    {
      exports.__linariaPreval = [a];
    }
  }
}"
`;

exports[`shakes imports 1`] = `
"{
  function _getRequireWildcardCache() {
    if (typeof WeakMap !== \\"function\\") return null;
    var cache = new WeakMap();

    _getRequireWildcardCache = function () {
      return cache;
    };

    return cache;
  }

  {
    function _interopRequireWildcard(obj) {
      if (obj && obj.__esModule) {
        return obj;
      }

      if (obj === null || typeof obj !== \\"object\\" && typeof obj !== \\"function\\") {
        return {
          default: obj
        };
      }

      var cache = _getRequireWildcardCache();

      if (cache && cache.has(obj)) {
        return cache.get(obj);
      }

      var newObj = {};
      var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor;

      for (var key in obj) {
        if (Object.prototype.hasOwnProperty.call(obj, key)) {
          var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null;

          if (desc && (desc.get || desc.set)) {
            Object.defineProperty(newObj, key, desc);
          } else {
            newObj[key] = obj[key];
          }
        }
      }

      newObj.default = obj;

      if (cache) {
        cache.set(obj, newObj);
      }

      return newObj;
    }

    {
      var _ = _interopRequireWildcard(require(\\"\\\\u2026\\"));

      {
        exports.__linariaPreval = [_.whiteColor, _.default];
      }
    }
  }
}"
`;

exports[`shakes sequence expression 1`] = `
"{
  var _ = require(\\"\\\\u2026\\");

  {
    let local = '';
    {
      const color1 = () => 'blue';

      {
        const color2 = () => local;

        {
          exports.__linariaPreval = [color2];
        }
      }
    }
  }
}"
`;

exports[`should keep member expression key 1`] = `
"{
  const obj = {
    blue: '#00F'
  };
  {
    const key = 'blue';
    {
      const blue = obj[key];
      {
        exports.__linariaPreval = [blue];
      }
    }
  }
}"
`;
